<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/fragment_profile"
            app:titleTextColor="@color/colorWhite" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/profil_tio" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/name"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/mahasiswa_it_telkom_purwokerto"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:padding="4dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:padding="2dp"
                        android:text="@string/social_media"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="8dp"
                            android:padding="4dp"
                            android:src="@drawable/icon_github" />

                        <TextView
                            android:id="@+id/tv_github"
                            style="@style/desc_text"
                            android:layout_gravity="center_vertical"
                            android:layout_marginBottom="4dp"
                            android:text="@string/github_name" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="8dp"
                            android:padding="4dp"
                            android:src="@drawable/icon_instagram" />

                        <TextView
                            android:id="@+id/tv_ig"
                            style="@style/desc_text"
                            android:layout_gravity="center_vertical"
                            android:layout_marginBottom="4dp"
                            android:text="@string/ig_name" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="32dp"
                android:padding="4dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        style="@style/title_text"
                        android:text="@string/address" />

                    <TextView
                        style="@style/desc_text"
                        android:layout_marginStart="8dp"
                        android:text="@string/my_address" />

                    <TextView
                        style="@style/title_text"
                        android:layout_marginTop="16dp"
                        android:text="@string/hobby" />

                    <TextView
                        style="@style/desc_text"
                        android:layout_marginStart="8dp"
                        android:text="@string/my_hobby" />

                    <TextView
                        style="@style/title_text"
                        android:layout_marginTop="16dp"
                        android:text="@string/quotes" />

                    <TextView
                        style="@style/desc_text"
                        android:layout_marginStart="8dp"
                        android:text="@string/my_quotes" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>